[gd_scene load_steps=6 format=3 uid="uid://di8bn6g7qpfia"]

[ext_resource type="Theme" uid="uid://cpendnc1jo8it" path="res://assets/theme.tres" id="1_ypxv8"]
[ext_resource type="Script" path="res://scenes/rooms/main_room/player_picker.gd" id="2_h52uo"]
[ext_resource type="StyleBox" uid="uid://cf6r4yjn5n8k8" path="res://assets/curved_rectangle.tres" id="3_8xowo"]
[ext_resource type="Script" path="res://scenes/rooms/main_room/color_button.gd" id="4_vhg0v"]
[ext_resource type="Script" path="res://scenes/rooms/main_room/play_button.gd" id="5_rqs83"]

[node name="MainRoom" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_ypxv8")
color = Color(0.93, 0.93, 0.93, 1)

[node name="PlayerPicker" type="Node2D" parent="."]
position = Vector2(86, 328)
script = ExtResource("2_h52uo")

[node name="ColorPanelContainer" type="PanelContainer" parent="PlayerPicker"]
clip_contents = true
offset_right = 556.0
offset_bottom = 423.0
theme = ExtResource("1_ypxv8")
theme_override_styles/panel = ExtResource("3_8xowo")
metadata/_edit_use_anchors_ = true

[node name="NameTextEdit" type="TextEdit" parent="PlayerPicker"]
offset_left = 277.0
offset_top = 42.0
offset_right = 527.0
offset_bottom = 117.0
theme = ExtResource("1_ypxv8")
placeholder_text = "Name"
context_menu_enabled = false
middle_mouse_paste_enabled = false
metadata/_edit_use_anchors_ = true

[node name="AddButton" type="Button" parent="PlayerPicker"]
offset_left = 372.0
offset_top = 249.0
offset_right = 522.0
offset_bottom = 399.0
theme = ExtResource("1_ypxv8")
text = "+"
metadata/_edit_use_anchors_ = true

[node name="ColorTextEdit" type="TextEdit" parent="PlayerPicker"]
offset_left = 281.0
offset_top = 131.0
offset_right = 441.0
offset_bottom = 206.0
theme = ExtResource("1_ypxv8")
placeholder_text = "Colour"
editable = false
metadata/_edit_use_anchors_ = true

[node name="ColorButton" type="Button" parent="PlayerPicker"]
offset_left = 452.0
offset_top = 132.0
offset_right = 527.0
offset_bottom = 207.0
script = ExtResource("4_vhg0v")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="PlayerPicker/ColorButton"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 70.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="PictureButton" type="Button" parent="PlayerPicker"]
offset_left = 20.0
offset_top = 41.0
offset_right = 264.0
offset_bottom = 261.0
theme = ExtResource("1_ypxv8")
theme_override_font_sizes/font_size = 32
text = "Picture"
metadata/_edit_use_anchors_ = true

[node name="PictureButtonSprite2D" type="Sprite2D" parent="PlayerPicker/PictureButton"]
position = Vector2(122, 110)

[node name="Title" type="Label" parent="."]
offset_left = 42.0
offset_top = 26.0
offset_right = 1284.0
offset_bottom = 209.0
theme = ExtResource("1_ypxv8")
theme_override_font_sizes/font_size = 120
text = "GUILTY GEAR QUIZ"

[node name="PlayButton" type="Button" parent="."]
offset_left = 94.0
offset_top = 869.0
offset_right = 579.0
offset_bottom = 1029.0
theme = ExtResource("1_ypxv8")
text = "Play"
script = ExtResource("5_rqs83")

[node name="PlayerListColorRect" type="ColorRect" parent="."]
z_index = -5
offset_left = 1520.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.899258, 0.899258, 0.899258, 1)

[node name="Contestants" type="Label" parent="PlayerListColorRect"]
z_index = 10
layout_mode = 0
offset_left = 22.0
offset_top = 60.0
offset_right = 359.0
offset_bottom = 167.0
theme = ExtResource("1_ypxv8")
theme_override_font_sizes/font_size = 60
text = "Contestants"
